--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -18,5 +18,9 @@
         android:id="@+id/studentDetailFragment"
         android:name="com.ubaya.advweek4.view.StudentDetailFragment"
         android:label="Student Detail"
-        tools:layout="@layout/fragment_student_detail" />
+        tools:layout="@layout/fragment_student_detail" >
+        <argument
+            android:name="student_id"
+            app:argType="string" />
+    </fragment>
 </navigation>
