--- a/app/src/main/res/layout/fragment_student_detail.xml
+++ b/app/src/main/res/layout/fragment_student_detail.xml
@@ -122,4 +122,14 @@
         app:layout_constraintEnd_toEndOf="@+id/imageStudentDetail"
         app:layout_constraintStart_toStartOf="@+id/imageStudentDetail"
         app:layout_constraintTop_toTopOf="@+id/imageStudentDetail" />
+
+    <Button
+        android:id="@+id/buttonNotif"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Create Notification"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
